CSS修正とBOARDモデル、コントローラー追加

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -18,5 +18,5 @@
       %br/
       = f.password_field :password_confirmation, autocomplete: "new-password", class: 'text'
     .actions
-      = f.submit "submit", class: 'submit_btn'
+      = f.submit "submit", class: 'btn-primary'
   = render "devise/shared/links"
