--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,28 +1,35 @@
 @import 'header';
+@import 'tabs';
+@import 'variables';
+@import 'card';
+@import 'buttons';
 @import 'form';
 
-.container {
-    width: 414px;
-    height: 921px;
-    background: #FFFFFF;
+html {
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  height: 100%;
 }
 
-/* Boards */
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+}
 
-.boards{
-    position: absolute;
-    width: 56px;
-    height: 25px;
-    left: 30px;
-    top: 17px;
+body {
+  height: 100%;
+  background-color: $base-bg-color;
+  font-size: 1em;
+  color: $text-base-color;
+}
 
-    font-family: Avenge;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 25px;
-
-    /* identical to box height */
-
-    color: #000000;
+.container {
+  margin: 0 26px;
+  margin-top: 33px;
 }
