--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -1,29 +1,28 @@
-input, select {
-    &.text {
-      width: 100%;
-      margin: 8px 0px;
-      padding: 16px 24px;
-      border: 1px solid #EBEBEB;
-      color: #F4F4F4;
-    }
+@import 'variables';
+
+input {
+  &.text {
+    width: 100%;
+    margin: 8px 0px;
+    padding: 16px 24px;
+    border: solid 1px #ccc;
+    background: $text-box-color;
+    border-radius: 10px;
   }
+}
 
 label {
-    position: absolute;
-    font-family: Avenir;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 25px;   
+  font-size: 18px;
 }
 
-.submit_btn{
-    width: 100%;
-    height: 40px;
-    left: 30px;
-    top: 889px;
+textarea {
+  width: 100%;
+  margin: 8px 0px;
+  padding: 8px 8px;
+  min-height: 440px;
+  resize: vertical;
+  border: 1px solid #EBEBEB;
+  background: $text-box-color;
+  border-radius: 10px;
 
-    background: #F8BD1C;
-    border-radius: 4px;
 }
-
